# llm-prod-log-debugger

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
samples/: database_service.py  logs_npe.txt  logs_timeout.txt
samples/code/: AuthMiddleware.js  UserService.java
scripts/: demo.ps1  demo.sh  run_local.ps1  run_local.sh  test_tools_only.py
src/: __init__.py  __main__.py
src/agents/: __init__.py  analyzer.py  base.py  critic.py
src/agents/prompts/: __init__.py  analyzer.md  critic.md
src/config/: settings.yaml  tool_schemas.json
src/models/: __init__.py  hypothesis.py  log_entry.py  report.py  tool_call.py
src/orchestrator/: __init__.py  engine.py  main.py  state.py  tool_router.py
src/tools/: __init__.py  grep_error.py  parse_logs.py
src/utils/: __init__.py  chunking.py  config_loader.py  io_helpers.py  redaction.py  timers.py  validators.py
src/vendors/: gemini_client_rest.py  genai_sdk_client.py  llm_client_base.py
tests/unit/: test_parse_logs.py
